<?xml version="1.0"?>
<package>
  <name>roboclaw</name>
  <version>1.0.0</version>
  <description>A package for talking to an IonMC Roboclaw speed controller over a serial port</description>

  <author email="colin.heffernan@outlook.com">Colin Heffernan</author>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
